--- a/manual/proyecto/proyecto.tex
+++ b/manual/proyecto/proyecto.tex
@@ -1,7 +1,9 @@
 \documentclass[a4paper,11pt]{book}
 %\documentclass[a4paper,twoside,11pt,titlepage]{book}
+\usepackage{array}
 \usepackage{dirtree}
 \usepackage{listings}
+\usepackage{longtable}
 \usepackage{float}
 \usepackage{subfig}
 \usepackage[utf8]{inputenc}
@@ -190,7 +192,7 @@ pdfproducer = {pdflatex}
 %
 \input{capitulos/03_GestionProyecto}
 %
-%\input{capitulos/04_Analisis}
+\input{capitulos/04_IntegracionRecomendadorExterno}
 %
 %\input{capitulos/05_Diseno}
 %
